--- a/wp-content/themes/paea_theme/css/Sass/_pages.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_pages.scss
@@ -214,7 +214,10 @@
 
 #schedule-page {
 	.bottom_divider {
-		padding-bottom: 20px;
+		padding-bottom: 10px;
+	}
+	h3 {
+		margin-top: 35px;
 	}
 }
 
@@ -226,8 +229,12 @@
 .schedule-item {
 	position: relative;
 	margin-top: 20px;
+	h4 {
+		margin-top: 5px;
+	}
 	ul {
 		padding-left: 0;
+		margin-bottom: 5px;
 		li {
 			display: inline-block;
 			color: $grey;
@@ -235,6 +242,9 @@
 			text-transform: uppercase;
 			padding-left: 0;
 			}
+	}
+	&:last-of-type {
+		margin-bottom: 20px;
 	}
 }
 
