responsive styling to discussion page, header, about page

--- a/wp-content/themes/paea_theme/css/Sass/_grid.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_grid.scss
@@ -4,6 +4,10 @@
 	margin-left: 70px;
 	margin-right: 70px;
 	margin-bottom: 25px;
+	@include phone {
+		margin-left: 0px;
+		margin-right: 0px;
+	}
 }
 
 /* clear fix */
