--- a/wp-content/themes/paea_theme/css/Sass/_header.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_header.scss
@@ -14,6 +14,13 @@
 	position: relative;
 }
 
+.navbar-nav>li {
+	@include phone {
+		text-align: center;
+	}	
+}
+
+
 .navbar-nav>li>a {
 	padding-top: 32px;
 	padding-bottom: 10px;
@@ -60,5 +67,9 @@ nav {
 
 .navbar {
 	margin-bottom: 0;
+}
+
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+	border-color: transparent;
 }
 
