--- a/wp-content/themes/paea_theme/css/Sass/_typography.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_typography.scss
@@ -73,6 +73,12 @@ a {
 	}
 }
 
+/* EXCEPTION FOR "ABOUT THE SUMMIT" PAGE */
+
+.about-page .page-summary p {
+	font-size: 18px;
+}
+
 .generic-page {
 	h3 {
 		margin-top: 40px;
