--- a/wp-content/themes/paea_theme/css/Sass/_components.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_components.scss
@@ -275,6 +275,11 @@ a[data-scribe="element:hashtag"] {
 	text-transform: uppercase;
 	font-weight: 600;
 	border: 1px solid $pink_orange;
+	@include phone {
+		padding: 4px 8px;
+		font-size: 10px;
+		margin-left: 0px;
+	}
 }
 
 .down-arrow, .right-arrow {	
@@ -300,6 +305,9 @@ a[data-scribe="element:hashtag"] {
 	margin-right: 5px;
 	svg {
 		width: 14px;
+		@include phone {
+			width: 12px;
+		}
 	}
 }
 
@@ -307,6 +315,9 @@ a[data-scribe="element:hashtag"] {
 	font-size: 19px;
 	font-weight: 500;
 	text-transform: initial;
+	@include phone {
+		font-size: 16px;
+	}
 }
 
 .pdf-button {
