--- a/wp-content/themes/paea_theme/css/Sass/_pages.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_pages.scss
@@ -179,9 +179,9 @@
 
 	h3 {
 		color: $white;
-		@include phone {
+		@include not-desktop {
 			margin-bottom: 70px;
-			float: right;
+			
 		}
 	}
 }
@@ -210,6 +210,15 @@
 	margin-bottom: 40px;
 	p {
 		font-weight: 400; //originally 300
+	}
+	@include tablet {
+		height: 600px;
+	}
+	@include phone {
+		height: 700px;
+	}
+	@include sm-phone {
+		height: 900px;
 	}
 }
 
@@ -475,6 +484,40 @@
 		}
 
 	}
+
+// OUTCOMES PAGE
+
+
+
+.outcomes-post {
+	margin-bottom: 40px;
+	a {
+		color: $accent_color;
+	}
+	ul {
+		display: inline-block;
+		padding-left: 0;
+		margin-top: 20px;
+		li {
+			display: inline-block;
+			color: $grey;
+			font-family: $secondary_font;
+			text-transform: uppercase;
+			padding-left: 0;
+			}
+	}
+	p {
+		font-size: 18px;
+		padding-bottom: 20px;
+		width: 100%;
+	}
+	.bottom_divider {
+		&:last-of-type {
+			margin-bottom: 80px;
+		}
+	}
+}
+
 
 // FAQ PAGE 
 
