--- a/wp-content/themes/paea_theme/css/Sass/_typography.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_typography.scss
@@ -56,7 +56,7 @@ a {
 
 // BASIC HEADING AND PARAGRAPH STYLE
 
-.generic-page, .about-page, #objectives, .after-the-summit, #attendees-page, #discussion-page, #schedule-page, #faq-page  {
+.generic-page, #outcomes-page, .about-page, #objectives, .after-the-summit, #attendees-page, #discussion-page, #schedule-page, #faq-page  {
 	padding-top: 60px;
 	padding-bottom: 60px;
 	h2, h3 {
