--- a/wp-content/themes/paea_theme/css/Sass/_variables.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_variables.scss
@@ -14,6 +14,7 @@ $medium_grey: #A1A4A7;
 $light_grey: #e8e8e8;
 $transition: all 0.5s ease-in-out;
 
+$sm-phone-width: 384px;
 $phone-width: 640px;
 $tablet-width: 768px;
 $desktop-width: 1024px;
@@ -84,6 +85,12 @@ $desktop-width: 1024px;
 		@content;
 	}
 }
+
+@mixin sm-phone {
+	@media (max-width: #{$sm-phone-width}) {
+		@content;
+	}
+} 
 
 @mixin retina {
   @media
