--- a/wp-content/themes/paea_theme/css/Sass/_header.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_header.scss
@@ -8,6 +8,11 @@
 .navbar-brand img {
 	height: 50px;
 	margin-left: 2em;
+	@include sm-phone {
+		height: 36px;
+		margin-left: 0.5em;
+		margin-top: 0.5em;
+	}
 }
 
 .navbar-nav {
