--- a/wp-content/themes/paea_theme/css/main.css
+++ b/wp-content/themes/paea_theme/css/main.css
@@ -79,6 +79,11 @@ a {
 .navbar-brand img {
   height: 50px;
   margin-left: 2em; }
+  @media (max-width: 384px) {
+    .navbar-brand img {
+      height: 36px;
+      margin-left: 0.5em;
+      margin-top: 0.5em; } }
 
 .navbar-nav {
   position: relative; }
@@ -180,7 +185,7 @@ footer {
       box-shadow: none; }
   footer .form-control {
     margin-top: 1em;
-    height: 55px;
+    height: 63px;
     border-radius: 0px !important;
     border: 1px solid #f1f2f2;
     padding: 20px 15px;
@@ -257,13 +262,29 @@ footer {
     padding: 15px 10px 5px 25px; }
   .grid-item p {
     padding: 10px 25px; }
+  @media (max-width: 1024px) {
+    .grid-item {
+      width: 100%; } }
+  @media (max-width: 1024px) {
+    .grid-item {
+      margin-left: 0;
+      margin-right: 0; } }
 
 .grid-item--rectangle {
   width: 480px; }
+  @media (max-width: 1024px) {
+    .grid-item--rectangle {
+      width: 100%; } }
 
 .grid-item--lg-square {
   width: 480px;
   height: 480px; }
+  @media (max-width: 1024px) {
+    .grid-item--lg-square {
+      width: 100%; } }
+  @media (max-width: 384px) {
+    .grid-item--lg-square {
+      height: 580px; } }
 
 .grid-item--sm-square {
   width: 50%;
@@ -363,9 +384,18 @@ footer {
     font-size: 18px;
     line-height: 1.6;
     overflow: hidden; }
+  @media (max-width: 384px) {
+    .twitter-block {
+      height: 300px; } }
 
 .homepage section.hero {
   height: 680px; }
+  @media (min-width: 768px) and (max-width: 1023px) {
+    .homepage section.hero {
+      height: 700px; } }
+  @media (max-width: 640px) {
+    .homepage section.hero {
+      height: 780px; } }
 
 .hero .container {
   position: relative;
@@ -377,11 +407,7 @@ footer {
     font-weight: 400;
     line-height: 1.4em;
     margin-bottom: 1.7em; }
-    @media (min-width: 768px) and (max-width: 1023px) {
-      .hero .container p {
-        font-size: 28px;
-        margin-bottom: 1em; } }
-    @media (max-width: 640px) {
+    @media (max-width: 1024px) {
       .hero .container p {
         font-size: 28px;
         margin-bottom: 1em; } }
@@ -394,11 +420,12 @@ footer {
   height: 680px;
   overflow: hidden;
   z-index: -1; }
+  @media (min-width: 768px) and (max-width: 1023px) {
+    .homepage section.hero .hero-video-container {
+      height: 700px; } }
   @media (max-width: 640px) {
     .homepage section.hero .hero-video-container {
-      position: relative;
-      top: 0;
-      height: initial; } }
+      height: 780px; } }
 
 .hero-video-container video {
   min-height: 100%;
@@ -526,8 +553,11 @@ video {
 
 .video-container {
   position: relative;
-  margin: 0px 85px 40px 85px;
+  margin: 0px 70px 40px 70px;
   background-size: cover; }
+  @media (max-width: 640px) {
+    .video-container {
+      margin: 30px 0px; } }
 
 .videoWrapper {
   position: relative;
@@ -594,6 +624,20 @@ video {
     float: left;
     margin-right: 20px;
     transition: all 0.5s ease-in-out; }
+    @media (max-width: 640px) {
+      .video-caption svg {
+        position: relative;
+        top: 50%;
+        margin-top: 0;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%); } }
+  @media (max-width: 640px) {
+    .video-caption {
+      height: 100%;
+      -webkit-transform-style: preserve-3d;
+      -moz-transform-style: preserve-3d;
+      transform-style: preserve-3d; } }
   .video-caption p {
     overflow: hidden;
     font-size: 18px;
@@ -601,6 +645,13 @@ video {
     color: #f1f2f2;
     padding-top: 18px;
     text-transform: uppercase; }
+    @media (max-width: 640px) {
+      .video-caption p {
+        position: relative;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%); } }
   .video-caption:hover {
     background-color: rgba(0, 121, 100, 0.9); }
 
@@ -731,6 +782,9 @@ a[data-scribe="element:hashtag"] {
   text-align: center; }
   .top_banner li {
     display: inline-block; }
+  @media (max-width: 1024px) {
+    .top_banner {
+      padding-top: 50px; } }
 
 .hero_btn_group {
   text-align: center; }
@@ -742,6 +796,47 @@ a[data-scribe="element:hashtag"] {
   .hero_btn:nth-of-type(1) {
     margin-right: 20px;
     margin-left: 20px; }
+    @media (max-width: 1024px) {
+      .hero_btn:nth-of-type(1) {
+        margin-right: 0;
+        margin-left: 0; } }
+  @media (max-width: 1024px) {
+    .hero_btn {
+      width: 100%;
+      margin-top: 20px; } }
+
+@media (max-width: 1024px) {
+  video {
+    max-width: initial; } }
+
+.sponsors {
+  border-top: 1px solid #dedede;
+  padding: 60px 0;
+  margin-left: 70px;
+  margin-right: 70px; }
+  .sponsors h3, .sponsors .top_banner {
+    color: #e24e34;
+    text-align: center; }
+
+ul.sponsor-list {
+  list-style-type: none;
+  padding-left: 0;
+  text-align: center; }
+  ul.sponsor-list li {
+    display: inline-block; }
+
+.sponsor-logo img {
+  width: 250px;
+  margin: 50px;
+  transition: all 0.5s ease-in-out; }
+  .sponsor-logo img:hover, .sponsor-logo img:focus, .sponsor-logo img:active, .sponsor-logo img:active:focus {
+    box-shadow: 0px 4px 0px transparent;
+    transform: translate(0px, -5px); }
+  @media (max-width: 1024px) {
+    .sponsor-logo img {
+      width: 80%;
+      margin-left: 0;
+      margin-right: 0; } }
 
 .callout {
   width: 300px;
@@ -848,6 +943,18 @@ a[data-scribe="element:hashtag"] {
   display: block;
   height: 0;
   clear: both; }
+
+#special-thanks {
+  background-color: #63686c;
+  padding: 60px 0px; }
+  #special-thanks h3, #special-thanks .top_banner {
+    text-align: center;
+    color: #f1f2f2; }
+  #special-thanks p {
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 1.6;
+    color: #f1f2f2; }
 
 #quote {
   background: #007964;
