--- a/wp-content/themes/paea_theme/css/main.css
+++ b/wp-content/themes/paea_theme/css/main.css
@@ -1077,7 +1077,12 @@ ul.sponsor-list {
   position: relative;
   margin-top: 20px; }
   .discussion-question a {
-    color: #007964; }
+    color: #007964;
+    transition: all 0.5s ease-in-out; }
+    .discussion-question a:hover, .discussion-question a:focus, .discussion-question a:active:focus {
+      color: #007964; }
+      .discussion-question a:hover #right-arrow polygon, .discussion-question a:focus #right-arrow polygon, .discussion-question a:active:focus #right-arrow polygon {
+        fill: #007964; }
   .discussion-question ul {
     display: inline-block;
     padding-left: 0;
@@ -1100,18 +1105,17 @@ ul.sponsor-list {
     position: absolute;
     right: -180px;
     bottom: 50%;
-    width: 40px;
-    transition: all 0.5s ease-in-out; }
+    width: 40px; }
     @media (min-width: 768px) and (max-width: 1023px) {
       .discussion-question #right-arrow {
         right: -125px;
         width: 35px; } }
+    @media (max-width: 640px) {
+      .discussion-question #right-arrow {
+        visibility: hidden;
+        right: 0; } }
     .discussion-question #right-arrow polygon {
       fill: #63686c; }
-    .discussion-question #right-arrow:hover, .discussion-question #right-arrow:focus, .discussion-question #right-arrow:active:focus {
-      right: -185px; }
-      .discussion-question #right-arrow:hover polygon, .discussion-question #right-arrow:focus polygon, .discussion-question #right-arrow:active:focus polygon {
-        fill: #007964; }
 
 #comment-bubble {
   width: 14px;
