--- a/wp-content/themes/paea_theme/css/Sass/_footer.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_footer.scss
@@ -107,6 +107,7 @@ footer {
 		position: relative;
 		left: 0;
 		width: 36px;
+		height: 15px;
 		fill: $medium_grey;
 		transition: $transition;
 		&:focus, &:active, &:hover  {
