added plugins directory to gitignore, removed left padding from footer UL, made some mobile improvements

--- a/wp-content/themes/paea_theme/css/Sass/_components.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_components.scss
@@ -245,6 +245,10 @@ video {
 	h3 {
 		margin-left: 85px;
 		color: $pink_orange;
+		@include not-desktop {
+			margin-left: initial;
+			text-align: center;
+		}
 	}
 
 	#twitter-block {
