--- a/wp-content/themes/paea_theme/css/Sass/_footer.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_footer.scss
@@ -121,6 +121,7 @@ footer {
 		margin-top: 25px;
 		margin-bottom: 25px;
 		text-align: center;
+		padding-left: 0;
 		li {
 		margin-right: 20px;
 		display: inline-block;
